        PR target/36222         * config/i386/i386.c (ix86_expand_vector_init_general): Rearrange op0         and op1 expansion before vector concat to have less live pseudos.

testsuite/ChangeLog:

        PR target/36222
        * gcc.target/i386/pr36222-1.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@135275 138bc75d-0d04-0410-961f-82ee72b054a4